refactor distributed reductions a bit

--- a/src/ibis/ibis/commands/CMakeLists.txt
+++ b/src/ibis/ibis/commands/CMakeLists.txt
@@ -20,6 +20,7 @@ target_link_libraries(
 )
 target_include_directories(ibis_clean PUBLIC ../..)
 
+# non-distributed variant of the run command
 add_library(run STATIC run/run.cpp ../config.cpp)
 target_link_libraries(
         run PUBLIC 
@@ -36,6 +37,25 @@ target_link_libraries(
 )
 target_include_directories(run PUBLIC ../..)
 
+# distributed variant of the run command
+if (Ibis_ENABLE_MPI)
+  add_library(run_dist STATIC run/run.cpp ../config.cpp)
+  target_link_libraries(
+          run_dist PUBLIC 
+          Kokkos::kokkos 
+          doctest 
+          grid 
+          runge_kutta 
+          solver 
+          nlohmann_json::nlohmann_json
+          gas
+          spdlog::spdlog
+          runtime_dirs
+          CLI11::CLI11
+  )
+  target_include_directories(run_dist PUBLIC ../..)
+  target_compile_definitions(run_dist PUBLIC Ibis_ENABLE_DISTRIBUTED_MEMORY)
+endif (Ibis_ENABLE_MPI)
 
 add_library(
         post 
