--- a/src/parallel/CMakeLists.txt
+++ b/src/parallel/CMakeLists.txt
@@ -50,21 +50,34 @@ if (Ibis_BUILD_TESTS)
         parallel
     )
 
+    add_test(NAME parallel_unittest COMMAND parallel_unittest)
+
     if (Ibis_ENABLE_MPI)
-        target_link_libraries(
-            parallel
+        add_executable(
+            mpi_parallel_unittest
+            test/unittest.cpp
+            parallel/distributed_memory.cpp
+            parallel/shared_memory.cpp
+        )
+
+        target_include_directories(
+            mpi_parallel_unittest
             PUBLIC
-            ibis_mpi
+            .
+        )
+
+        target_link_libraries(
+            mpi_parallel_unittest
+            PRIVATE
+            doctest
+            Kokkos::kokkos
+            parallel
         )
         add_test(
-            NAME parallel_unittest
-            COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} 2 parallel_unittest
+            NAME mpi_parallel_unittest
+            COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} 2 mpi_parallel_unittest
         )
     else()
-        add_test(
-            NAME parallel_unittest
-            COMMAND parallel_unittest
-        )
     endif(Ibis_ENABLE_MPI)
 
     
