--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,6 +58,7 @@ if (Ibis_ENABLE_METIS)
     list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake/modules")
     find_package(METIS)
     if (METIS_FOUND)
+        include_directories(SYSTEM ${METIS_INCLUDE_DIR})
         add_compile_definitions(Ibis_ENABLE_METIS)
     else()
         MESSAGE(WARNING "METIS not found, continuing without it")
