Make cell mappings passed to GridIO partition constructors contain local cell ids

--- a/src/grid/CMakeLists.txt
+++ b/src/grid/CMakeLists.txt
@@ -44,6 +44,7 @@ if (Ibis_BUILD_TESTS)
         grid/vertex.cpp
         grid/geom.cpp
         grid/gradient.cpp
+        grid/partition.cpp
     )
 
     target_link_libraries(
