A bit of cleaning up libraries and progress towards getting shared and mpi versions working

--- a/src/finite_volume/CMakeLists.txt
+++ b/src/finite_volume/CMakeLists.txt
@@ -22,6 +22,7 @@ target_link_libraries(
 	  finite_volume 
 	  PUBLIC
 	  Kokkos::kokkos 
+	  parallel
 	  doctest 
 	  util
 	  nlohmann_json::nlohmann_json
@@ -52,6 +53,7 @@ if (Ibis_BUILD_TESTS)
     	  util
     	  doctest
     	  Kokkos::kokkos
+    	  parallel
     	  nlohmann_json::nlohmann_json
     	  spdlog::spdlog
 	      gas
