--- a/src/parallel/CMakeLists.txt
+++ b/src/parallel/CMakeLists.txt
@@ -14,20 +14,34 @@ target_link_libraries(
     util
 )
 
-if (Ibis_ENABLE_MPI)
-    add_subdirectory(parallel/mpi)
-    target_link_libraries(
-        parallel
-        PUBLIC
-        ibis_mpi
-    )
-endif(Ibis_ENABLE_MPI)
-
 target_include_directories(
     parallel
     PUBLIC
     .
 )
+
+if (Ibis_ENABLE_MPI)
+    add_subdirectory(parallel/mpi)
+    add_library(
+        parallel_dist
+        STATIC
+        parallel/distributed_memory.cpp
+        parallel/shared_memory.cpp
+        parallel/parallel.cpp
+    )
+    target_link_libraries(
+        parallel_dist
+        PRIVATE
+        ibis_mpi
+    )
+    target_include_directories(parallel_dist PUBLIC .)
+    target_compile_definitions(
+        parallel_dist
+        PRIVATE
+        Ibis_ENABLE_DISTRIBUTED_MEMORY
+    )
+endif(Ibis_ENABLE_MPI)
+
 
 if (Ibis_BUILD_TESTS)
     add_executable(
@@ -80,7 +94,4 @@ if (Ibis_BUILD_TESTS)
         )
     else()
     endif(Ibis_ENABLE_MPI)
-
-    
-
 endif(Ibis_BUILD_TESTS)
