--- a/src/solvers/CMakeLists.txt
+++ b/src/solvers/CMakeLists.txt
@@ -4,31 +4,18 @@ add_library(
 	solvers/solver.cpp
 	solvers/solver.h
 	solvers/cfl.cpp
-	solvers/steady_state.cpp
-	solvers/jfnk.cpp
 )
 
-target_link_libraries(
-	solver 
-	PUBLIC 
-	Kokkos::kokkos 
-	nlohmann_json::nlohmann_json 
-	linear_algebra
-	grid 
-	gas
-	spdlog::spdlog
-	IO
-	simulation
-)
 
 add_library(runge_kutta STATIC solvers/runge_kutta.cpp)
+add_library(jfnk STATIC solvers/jfnk.cpp)
+add_library(steady_state STATIC solvers/steady_state.cpp)
 
 target_include_directories(solver PUBLIC .)
 
 target_link_libraries(
 	runge_kutta 
 	PUBLIC 
-	Kokkos::kokkos 
 	doctest 
 	util 
 	grid 
@@ -38,6 +25,45 @@ target_link_libraries(
 	spdlog::spdlog
 	IO
 )
+target_link_libraries(
+	jfnk 
+	PUBLIC 
+	doctest 
+	util 
+	grid 
+	nlohmann_json::nlohmann_json
+	finite_volume
+	solver
+	spdlog::spdlog
+	IO
+)
+target_link_libraries(
+	steady_state 
+	PUBLIC 
+	doctest 
+	util 
+	grid 
+	nlohmann_json::nlohmann_json
+	finite_volume
+	solver
+	spdlog::spdlog
+	IO
+	jfnk
+)
+target_link_libraries(
+	solver 
+	PUBLIC 
+	nlohmann_json::nlohmann_json 
+	linear_algebra
+	grid 
+	gas
+	spdlog::spdlog
+	IO
+	simulation
+	steady_state
+	runge_kutta
+)
+
 
 if (Ibis_BUILD_TESTS)
 	add_executable(
@@ -48,7 +74,6 @@ if (Ibis_BUILD_TESTS)
 	target_link_libraries(
 		solver_unittest 
 		PRIVATE
-		Kokkos::kokkos 
 		nlohmann_json::nlohmann_json 
 		grid 
 		gas
