Some more cleaning up of the parallel library interface

--- a/src/parallel/CMakeLists.txt
+++ b/src/parallel/CMakeLists.txt
@@ -1,59 +1,61 @@
+add_subdirectory(parallel/ibis_kokkos)
+
 add_library(
     parallel
-    STATIC
-    parallel/shared_memory.cpp
+    INTERFACE
+    # parallel/shared_memory.cpp
 )
 
 target_link_libraries(
     parallel
-    PUBLIC
-    Kokkos::kokkos 
+    INTERFACE
     doctest
     util
+    ibis_kokkos
 )
 
 target_include_directories(
     parallel
-    PUBLIC
+    INTERFACE
     .
 )
 
 if (Ibis_ENABLE_MPI)
-    add_subdirectory(parallel/mpi)
+    add_subdirectory(parallel/ibis_mpi)
     target_link_libraries(
         parallel
-        PRIVATE
+        INTERFACE
         ibis_mpi
     )
-    target_include_directories(parallel PUBLIC .)
+    target_include_directories(parallel INTERFACE .)
     target_compile_definitions(
         parallel
-        PRIVATE
+        INTERFACE
         Ibis_ENABLE_DISTRIBUTED_MEMORY
     )
 endif(Ibis_ENABLE_MPI)
 
 
-if (Ibis_BUILD_TESTS)
-    add_executable(
-        parallel_unittest
-        test/unittest.cpp
-    )
+# if (Ibis_BUILD_TESTS)
+#     add_executable(
+#         parallel_unittest
+#         test/unittest.cpp
+#     )
 
-    target_include_directories(
-        parallel_unittest
-        PUBLIC
-        .
-    )
+#     target_include_directories(
+#         parallel_unittest
+#         PUBLIC
+#         .
+#     )
 
-    target_link_libraries(
-        parallel_unittest
-        PRIVATE
-        doctest
-        Kokkos::kokkos
-        parallel
-    )
+#     target_link_libraries(
+#         parallel_unittest
+#         PRIVATE
+#         doctest
+#         Kokkos::kokkos
+#         parallel
+#     )
 
-    add_test(NAME parallel_unittest COMMAND parallel_unittest)
+#     add_test(NAME parallel_unittest COMMAND parallel_unittest)
 
-endif(Ibis_BUILD_TESTS)
+# endif(Ibis_BUILD_TESTS)
