Scope MPI operations properly in unit tests

--- a/src/parallel/parallel/ibis_mpi/CMakeLists.txt
+++ b/src/parallel/parallel/ibis_mpi/CMakeLists.txt
@@ -7,7 +7,7 @@ add_library(
 target_link_libraries(
     ibis_mpi
     PUBLIC
-    Kokkos::kokkos
+    # Kokkos::kokkos
     doctest
     util
     MPI::MPI_CXX
